<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/steel_background"
        tools:context=".MainActivity">



            <TextView
                android:id="@+id/budgetAmountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/enter_amount"
                android:textSize="@android:dimen/app_icon_size"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="295dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="380dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterAmountET"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints="@string/add_money"
                android:background="#FFFFFF"
                android:drawableStart="@drawable/ic_budget_black"
                android:ems="10"
                android:hint="@string/add_money"
                android:textColor="@color/colorDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="177dp"
            android:elevation="10dp"
            android:onClick="addAmount"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/addAmountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="addAmount"
                    android:text="@string/add_budget"
                    android:textColor="#fff" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>








</androidx.constraintlayout.widget.ConstraintLayout>